--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-tabs": "^5.1.0",
     "swiper": "^8.4.3",
     "web-vitals": "^2.1.4"
   },
